[#15]  * Added new preferences for derby home and derby rollback  * Added utility functions to convert java wrappers to primitives  * Songs' lengths are now stored in milliseconds instead of seconds  * Created progress bar that will update as a song plays

--- a/src/main/webapp/css/evilmusic.css
+++ b/src/main/webapp/css/evilmusic.css
@@ -28,3 +28,27 @@
     height: 200px;
     text-align: center;
 }
+
+.em-progress-bar {
+    width: 100%;
+    height: 10px;
+    padding: 5px;
+    display: table;
+}
+
+.em-progress-row {
+    display: table-row;
+}
+
+.em-progress-gutter {
+    width: 100%;
+    height: 10px;
+    background: gray;
+    display: table-cell;
+}
+
+.em-progress-meter {
+    height: 10px;
+    background: blue;
+    display: block;
+}
