[#11]  * Moved the player code into a service  * Songs can be played again, but the progress bar is not being updated during playback.  A new issue will be created for that.

--- a/src/main/webapp/components/queue/queue.html
+++ b/src/main/webapp/components/queue/queue.html
@@ -16,7 +16,7 @@
         <td>{{elem.song.id}}</td>
         <td>{{elem.song.title}}</td>
         <td>
-            <input type="button" value="play" ng-click="ctrl.queue.play(elem.queueIndex)"/>
+            <input type="button" value="play" ng-click="ctrl.player.play(elem.queueIndex)"/>
             <input type="button" value="remove" ng-click="ctrl.queue.remove(elem.queueIndex)"/>
         </td>
     </tr>
