--- a/src/main/webapp/components/evilmusic/evilmusic.html
+++ b/src/main/webapp/components/evilmusic/evilmusic.html
@@ -6,10 +6,10 @@
     <em-player-controls></em-player-controls>
     <em-progress-bar onseek="ctrl.player.seekToPercent"></em-progress-bar>
 </div>
-<div style="float:left">
+<div class="pull-left">
     <em-library></em-library>
 </div>
-<div style="float:right">
+<div class="pull-right">
     <em-queue></em-queue>
 </div>
-<div style="clear:both"></div>
+<div class="clearfix"></div>
