--- a/src/main/webapp/components/player/player.html
+++ b/src/main/webapp/components/player/player.html
@@ -1,6 +1,6 @@
 <div><h2>Player Controls</h2></div>
 <div>
-    <input type="button" value="play/pause" ng-click="ctrl.player.togglePlayback()"/>
+    <input type="button" class="btn btn-xs btn-default" value="play/pause" ng-click="ctrl.player.togglePlayback()"/>
     <div
         em-volume-control
         style="display:inline-block"
