--- a/src/main/webapp/components/volumecontrol/volumecontrol.html
+++ b/src/main/webapp/components/volumecontrol/volumecontrol.html
@@ -1,1 +1,11 @@
-0 <input type="range" min="0" max="100" ng-model="volume" ng-change="volumeChanged()"/> 100
+<form class="form-inline">
+    <div class="form-group">
+        <label class="control-label">0</label>
+    </div>
+    <div class="form-group">
+        <input type="range" min="0" max="100" ng-model="volume" ng-change="volumeChanged()"/>
+    </div>
+    <div class="form-group">
+        <label class="control-label">100</label>
+    </div>
+</form>
