[#33] Added support for a $classpath keyword in the music directories.  Also...  * Added some test flac files to be used for integration tests

--- a/src/main/webapp/assets/css/evilmusic.css
+++ b/src/main/webapp/assets/css/evilmusic.css
@@ -1,3 +1,6 @@
+/******************************************************************/
+/* THIS FILE ISN'T ACTUALLY BEING USED RIGHT NOW.  SEE ISSUE #35. */
+/******************************************************************/
 .eq-slider-container {
   padding-left: 10px;
   padding-right: 10px;
