--- a/src/main/webapp/components/eq/eq.html
+++ b/src/main/webapp/components/eq/eq.html
@@ -20,19 +20,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <form class="form-inline">
     <table class="container">
         <tbody>
-            <td class="eq-slider-container" ng-repeat="node in ctrl.eq.eq.nodes">
+            <td class="eq-slider-container" ng-repeat="node in ctrl.getEQ().nodes">
                 <div class="text-center">
                     {{ctrl.emUtils.hertzToString(node.frequency)}}
                 </div>
                 <div class="text-center">
-                    <input class="eq-slider"
-                    type="range" min="-40" max="10" step="0.1" orient="vertical"
-                    ng-model="node.gain" ng-change="ctrl.eq.updateNodeGain(node)"/>
+                    <input class="eq-slider" type="range" min="-40" max="10" step="0.1" orient="vertical"
+                        ng-model="node.gain" ng-change="ctrl.nodeChanged(node)"/>
                 </div>
                 <div class="text-center">
-                    <input class="eq-slider-text-field"
-                    type="number" min="-10" max="10" step="0.1"
-                    ng-model="node.gain" ng-change="ctrl.eq.updateNodeGain(node)"/>
+                    <input class="eq-slider-text-field" type="number" min="-10" max="10" step="0.1"
+                        ng-model="node.gain" ng-change="ctrl.nodeChanged(node)"/>
                 </div>
             </td>
         </tbody>
