--- a/src/main/webapp/components/queue/queue.html
+++ b/src/main/webapp/components/queue/queue.html
@@ -16,9 +16,11 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<div><h2>Queue</h2></div>
+<div>
+    <h2>Queue</h2>
+</div>
 <div class="em-top-table-controls-container">
-    <input type="button" class="btn btn-xs btn-default" value="clear queue" ng-click="ctrl.queue.clear()"/>
+    <input type="button" class="btn btn-xs btn-default" value="clear queue" ng-click="ctrl.clear()"/>
 </div>
 <table class="table table-striped table-condensed">
     <tr>
@@ -28,16 +30,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <th>Title</th>
         <th>Controls</th>
     </tr>
-    <tr ng-repeat="elem in ctrl.queue.q.elements">
+    <tr ng-repeat="elem in ctrl.getQueue().elements">
         <td>{{elem.playIndex}}</td>
         <td>{{elem.queueIndex}}</td>
         <td>{{elem.song.id}}</td>
         <td>{{elem.song.title}}</td>
         <td>
-            <input type="button" class="btn btn-xs btn-default"
-            value="play" ng-click="ctrl.player.play(elem.queueIndex)"/>
-            <input type="button" class="btn btn-xs btn-default"
-            value="remove" ng-click="ctrl.queue.remove(elem.queueIndex)"/>
+            <input type="button" class="btn btn-xs btn-default" value="play" ng-click="ctrl.play(elem.queueIndex)"/>
+            <input type="button" class="btn btn-xs btn-default" value="remove" ng-click="ctrl.remove(elem.queueIndex)"/>
         </td>
     </tr>
 </table>
