[#38] Updated some EQ related files to use ES6 classes.  Also...  * Fixed problem where the EQ nodes were not sorted correctly  * Refined the JSCS rules  * Updated the Browserify config to add a new path to check for modules

--- a/src/main/webapp/components/eq/eq.html
+++ b/src/main/webapp/components/eq/eq.html
@@ -20,9 +20,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <form class="form-inline">
     <table class="container">
         <tbody>
-            <td class="eq-slider-container" ng-repeat="node in ctrl.getEQ().nodes">
+            <td class="eq-slider-container" ng-repeat="node in ctrl.getEQ().nodes | orderBy: 'frequency'">
                 <div class="text-center">
-                    {{ctrl.emUtils.hertzToString(node.frequency)}}
+                    {{node.frequency | hertz}}
                 </div>
                 <div class="text-center">
                     <input class="eq-slider" type="range" min="-40" max="10" step="0.1" orient="vertical"
