[#38] Upgraded all controllers and services to use ES6 classes.  Also...  * Added injectID property to all Evil Music items that can be injected using Angular  * Added .tern-project file (no longer ignoring it)  * Updated the way the Angular app is initialized in index.js in the root webapp folder

--- a/src/main/webapp/components/evilmusic/evilmusic.html
+++ b/src/main/webapp/components/evilmusic/evilmusic.html
@@ -22,7 +22,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 </div>
 <div>
     <em-player-controls></em-player-controls>
-    <em-progress-bar onseek="ctrl.player.seekToPercent"></em-progress-bar>
+    <em-progress-bar></em-progress-bar>
 </div>
 <div class="pull-left">
     <em-library></em-library>
