--- a/src/main/webapp/components/player/player.html
+++ b/src/main/webapp/components/player/player.html
@@ -19,9 +19,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <div><h2>Player Controls</h2></div>
 <div>
     <input type="button" class="btn btn-xs btn-default" value="play/pause" ng-click="ctrl.player.togglePlayback()"/>
-    <div
-        em-volume-control
-        style="display:inline-block"
-        volume="ctrl.player.volume"
-        onvolumechange="ctrl.player.setVolume"></div>
+    <div em-volume-control style="display:inline-block"></div>
 </div>
