--- a/src/main/webapp/components/player/player.html
+++ b/src/main/webapp/components/player/player.html
@@ -18,6 +18,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 <div><h2>Player Controls</h2></div>
 <div>
-    <input type="button" class="btn btn-xs btn-default" value="play/pause" ng-click="ctrl.player.togglePlayback()"/>
+    <button class="btn btn-xs btn-default" ng-click="ctrl.player.togglePlayback()">
+        <i class="fa fa-play"></i> play/pause
+    </button>
     <div em-volume-control style="display:inline-block"></div>
 </div>
