--- a/src/main/webapp/components/queue/queue.html
+++ b/src/main/webapp/components/queue/queue.html
@@ -20,7 +20,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <h2>Queue</h2>
 </div>
 <div class="em-top-table-controls-container">
-    <input type="button" class="btn btn-xs btn-default" value="clear queue" ng-click="ctrl.clear()"/>
+    <button type="button" class="btn btn-xs btn-default" ng-click="ctrl.clear()" title="clear queue">
+        <i class="fa fa-ban"></i> clear
+    </button>
 </div>
 <table class="table table-striped table-condensed">
     <tr>
@@ -36,8 +38,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <td>{{elem.song.id}}</td>
         <td>{{elem.song.title}}</td>
         <td>
-            <input type="button" class="btn btn-xs btn-default" value="play" ng-click="ctrl.play(elem.queueIndex)"/>
-            <input type="button" class="btn btn-xs btn-default" value="remove" ng-click="ctrl.remove(elem.queueIndex)"/>
+            <button type="button" class="btn btn-xs btn-default" ng-click="ctrl.play(elem.queueIndex)" title="play">
+                <i class="fa fa-play"></i>
+            </button>
+            <button type="button" class="btn btn-xs btn-default" ng-click="ctrl.remove(elem.queueIndex)"
+                    title="remove from queue">
+                <i class="fa fa-times"></i>
+            </button>
         </td>
     </tr>
 </table>
