--- a/src/main/webapp/components/eq/eq-dialog/eq-dialog.html
+++ b/src/main/webapp/components/eq/eq-dialog/eq-dialog.html
@@ -16,11 +16,20 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<div><h2>Player Controls</h2></div>
-<div>
-    <button class="btn btn-xs btn-default" ng-click="ctrl.player.togglePlayback()">
-        <i class="fa fa-play"></i> play/pause
+<div class="modal-header">
+    <h4 class="modal-title">Equalizer</h4>
+</div>
+<div class="modal-body">
+    <em-eq></em-eq>
+</div>
+<div class="modal-footer">
+    <button class="btn btn-primary" ng-click="ctrl.save()">
+        <span class="fa fa-floppy-o"></span> Save
     </button>
-    <eq-button></eq-button>
-    <div em-volume-control style="display:inline-block"></div>
+    <button class="btn btn-default" ng-click="ctrl.reset()">
+        <span class="fa fa-minus"></span> Reset
+    </button>
+    <button class="btn btn-default" ng-click="ctrl.close()">
+        <span class="fa fa-times"></span> Close
+    </button>
 </div>
