[#4] Can go to next/previous song
 * Added next & previous buttons so you can go to the next & previous songs in the queue
 * Getting the song for the Aurora player no longer updates the queue's play index.  A REST endpoint was made to do this instead.

--- a/src/main/webapp/components/queue/queue.html
+++ b/src/main/webapp/components/queue/queue.html
@@ -32,7 +32,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <th>Title</th>
         <th>Controls</th>
     </tr>
-    <tr ng-repeat="elem in ctrl.getQueue().elements">
+    <tr ng-repeat="elem in ctrl.getQueue().elements" ng-class="{'info': elem.playIndex === 0}">
         <td>{{elem.playIndex}}</td>
         <td>{{elem.queueIndex}}</td>
         <td>{{elem.song.id}}</td>
