--- a/src/main/webapp/components/player/player.html
+++ b/src/main/webapp/components/player/player.html
@@ -18,8 +18,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 <div><h2>Player Controls</h2></div>
 <div>
-    <button class="btn btn-xs btn-default" ng-click="ctrl.player.togglePlayback()">
+    <button class="btn btn-xs btn-default" ng-click="ctrl.players.playPrevious()" title="previous song">
+        <i class="fa fa-fast-backward"></i>
+    </button>
+    <button class="btn btn-xs btn-default" ng-click="ctrl.players.togglePlayback()">
         <i class="fa fa-play"></i> play/pause
+    </button>
+    <button class="btn btn-xs btn-default" ng-click="ctrl.players.playNext()" title="next song">
+        <i class="fa fa-fast-forward"></i>
     </button>
     <eq-button></eq-button>
     <div em-volume-control style="display:inline-block"></div>
