--- a/src/main/webapp/components/progress-bar/progress-bar.html
+++ b/src/main/webapp/components/progress-bar/progress-bar.html
@@ -16,10 +16,6 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<div class="em-progress-bar">
-    <div class="em-progress-row">
-        <div class="em-progress-gutter">
-            <span class="em-progress-meter"></span>
-        </div>
-    </div>
+<div class="em-progress-bar-container">
+    <canvas class="em-progress-bar-canvas" width="{{ctrl.getCanvasWidth()}}" height="10px"></canvas>
 </div>
