[#53] Started upgrade to Angular 2.
Started the upgrade to Angular 2.  Created a proof-of-concept component and service.

--- a/src/main/webapp/components/player/player.html
+++ b/src/main/webapp/components/player/player.html
@@ -28,5 +28,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <i class="fa fa-fast-forward"></i>
     </button>
     <eq-button></eq-button>
-    <div em-volume-control style="display:inline-block"></div>
+    <em-volume-control></em-volume-control>
 </div>
