--- a/src/main/webapp/components/ng2-example/ng2-example.html
+++ b/src/main/webapp/components/ng2-example/ng2-example.html
@@ -1,1 +1,4 @@
-<h1>(template) the text is "{{text}}"</h1>
+<div>
+    <h1>(template) the text is "{{text}}"</h1>
+    <ng2-child-example [tfp]="tfp" ></ng2-child-example>
+</div>
