[#53] Converted more directives into components
Converted the progress bar directive into an Angular 2 component.

--- a/src/main/webapp/components/queue/queue.html
+++ b/src/main/webapp/components/queue/queue.html
@@ -32,7 +32,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <th>Title</th>
         <th>Controls</th>
     </tr>
-    <tr *ngFor="let elem of getQueueElements()" [class]="{info: isElementPlaying(elem)}">
+    <tr *ngFor="let elem of getQueueElements()" [ngClass]="{info: isElementPlaying(elem)}">
         <td>{{elem.playIndex}}</td>
         <td>{{elem.queueIndex}}</td>
         <td>{{elem.song.id}}</td>
