--- a/src/main/webapp/components/progress-bar/progress-bar.html
+++ b/src/main/webapp/components/progress-bar/progress-bar.html
@@ -17,5 +17,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <div class="em-progress-bar-container">
-    <canvas class="em-progress-bar-canvas" width="{{ctrl.getCanvasWidth()}}" height="10px"></canvas>
+    <canvas class="em-progress-bar-canvas" (click)="barClicked($event)"></canvas>
 </div>
