[#53] Removed files for converted components
Removed the old files for the already converted Angular 2 components.

--- a/src/main/webapp/components/player/player.html
+++ b/src/main/webapp/components/player/player.html
@@ -27,6 +27,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <button class="btn btn-xs btn-default" (click)="players.playNext()" title="next song">
         <i class="fa fa-fast-forward"></i>
     </button>
-    <eq-button></eq-button>
+    <em-eq-button></em-eq-button>
     <em-volume-control></em-volume-control>
 </div>
