--- a/src/main/webapp/components/eq/eq-button/eq-button.html
+++ b/src/main/webapp/components/eq/eq-button/eq-button.html
@@ -19,30 +19,4 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <button class="btn btn-xs btn-default" (click)="openEQ()" title="open equalizer">
     <i class="fa fa-sliders fa-rotate-90"></i>
 </button>
-
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+<em-eq-dialog></em-eq-dialog>
