--- a/src/main/webapp/components/evilmusic/evilmusic.html
+++ b/src/main/webapp/components/evilmusic/evilmusic.html
@@ -28,3 +28,4 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <em-queue></em-queue>
 </div>
 <div class="clearfix"></div>
+<em-alert></em-alert>
