[closes #58] Now using ng2-bootstrap modals
Now using ng2-bootstrap modals instead of directly using bootstrap modals.  Also...
 * Removed JQuery b/c it was only being used to display the bootstrap modals

--- a/src/main/webapp/components/alert/alert.html
+++ b/src/main/webapp/components/alert/alert.html
@@ -16,7 +16,7 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<div class="modal fade" [id]="elemID" tabindex="-1">
+<div bsModal #alertDialog="bs-modal" class="modal fade" [id]="elemID" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
