--- a/src/main/webapp/components/eq/eq-button/eq-button.html
+++ b/src/main/webapp/components/eq/eq-button/eq-button.html
@@ -16,7 +16,32 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<button class="btn btn-xs btn-default" (click)="openEQ()" title="open equalizer">
+<button class="btn btn-xs btn-default" (click)="open()" title="open equalizer">
     <i class="fa fa-sliders fa-rotate-90"></i>
 </button>
-<em-eq-dialog></em-eq-dialog>
+
+<div bsModal #eqDialog="bs-modal" class="modal fade eq-dialog" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Equalizer</h4>
+            </div>
+            <div class="modal-body">
+                <em-eq></em-eq>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" (click)="reset()">
+                    <span class="fa fa-minus"></span> Reset
+                </button>
+                <button class="btn btn-default" (click)="close()">
+                    <span class="fa fa-times"></span> Close
+                </button>
+                <button class="btn btn-primary" (click)="save()">
+                    <span class="fa fa-floppy-o"></span> Save
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
