[#65] Loading overlay for library now functional
The loading overlay over the library component is now functional.  It will appear & dissappear whenever the library is loading.

--- a/src/main/webapp/components/loading-overlay/loading-overlay.html
+++ b/src/main/webapp/components/loading-overlay/loading-overlay.html
@@ -17,7 +17,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <div class="em-loading-overlay-pos-relative">
-    <div class="em-loading-animation-container">
+    <div *ngIf="overlayVisible" class="em-loading-animation-container em-loading-center-child">
         <div class="em-loading-overlay-spinner">
             <div class="em-loading-overlay-rect-1"></div>
             <div class="em-loading-overlay-rect-2"></div>
