--- a/src/main/webapp/components/eq/eq-button/eq-button.html
+++ b/src/main/webapp/components/eq/eq-button/eq-button.html
@@ -23,6 +23,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <div bsModal #eqDialog="bs-modal" class="modal fade eq-dialog" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
+            <em-loading-overlay [overlayVisible]="loading" [fullScreen]="'true'"></em-loading-overlay>
+            
             <div class="modal-header">
                 <h4 class="modal-title">Equalizer</h4>
             </div>
