--- a/src/main/webapp/components/loading-overlay/loading-overlay.css
+++ b/src/main/webapp/components/loading-overlay/loading-overlay.css
@@ -16,7 +16,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.em-loading-overlay-pos-relative {
+.em-loading-pos-relative {
     position:relative;
 }
 
