--- a/src/main/webapp/components/loading-overlay/loading-overlay.html
+++ b/src/main/webapp/components/loading-overlay/loading-overlay.html
@@ -16,7 +16,7 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<div class="em-loading-overlay-pos-relative">
+<div [ngClass]="{'em-loading-pos-relative': !fullScreen}">
     <div *ngIf="overlayVisible" class="em-loading-animation-container em-loading-center-child">
         <div class="em-loading-overlay-spinner">
             <div class="em-loading-overlay-rect-1"></div>
