[#5] Added basic UI support for playlists
Added basic (not really usablable yet) support for playlists to the UI.  You can just add & remove them.  You can't acutually add songs to them yet.  Also...
 * Moved all non-global CSS into the folder of the component that uses it
 * Rearranged the UI a bit to remove most of the headings
 * The sort pipe is no longer pure in order to support change detection on the components
 * Made a more optimized function on the server to verify that an EQ exists in the database
 * The pre-commit hook will now force the Java unit tests to run even if the code base hasn't been changed since their last run.

--- a/src/main/webapp/assets/css/global.css
+++ b/src/main/webapp/assets/css/global.css
@@ -16,28 +16,14 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-import _ from 'lodash';
-import {Pipe} from '@angular/core';
-
-export class SortPipe {
-    static get annotations() {
-        return [new Pipe({
-            name: 'sort',
-            pure: false
-        })];
-    }
- 
-    static get parameters() {
-        return [];
-    }
- 
-    transform(collection, key) {
-        if(collection && !Array.isArray(collection)) {
-            collection = Array.from(collection);
-        }
-        
-        return _.sortBy(collection, key);
-    }
+.em-clickable {
+    cursor: pointer;
 }
 
-export default SortPipe;
+.em-tab-content {
+    margin-top: 10px;
+}
+
+.em-top-table-controls-container {
+    margin-bottom: 5px;
+}
