--- a/src/main/webapp/components/eq/eq.css
+++ b/src/main/webapp/components/eq/eq.css
@@ -16,10 +16,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-/******************************************************************/
-/* THIS FILE ISN'T ACTUALLY BEING USED RIGHT NOW.  SEE ISSUE #35. */
-/******************************************************************/
-
 .eq-slider-container {
     padding-left: 10px;
     padding-right: 10px;
@@ -27,8 +23,12 @@
 }
 
 .eq-slider {
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* WebKit */
+    /* IE */
+    writing-mode: bt-lr;
+    
+    /* WebKit */
+    -webkit-appearance: slider-vertical;
+    
     width: 8px;
     height: 200px;
     margin-bottom: 3px;
@@ -39,30 +39,3 @@
     width: 45px;
 }
 
-.em-progress-bar {
-    width: 100%;
-    height: 10px;
-    padding: 5px;
-    display: table;
-}
-
-.em-progress-row {
-    display: table-row;
-}
-
-.em-progress-gutter {
-    width: 100%;
-    height: 10px;
-    background: gray;
-    display: table-cell;
-}
-
-.em-progress-meter {
-    height: 10px;
-    background: blue;
-    display: block;
-}
-
-.em-top-table-controls-container {
-    margin-bottom: 5px;
-}
