--- a/src/main/webapp/components/media/media.html
+++ b/src/main/webapp/components/media/media.html
@@ -16,20 +16,15 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<div class="container-fluid">
-    <div class="row em-top-container">
-        <em-progress-bar></em-progress-bar>
-        <em-player-controls></em-player-controls>
-    </div>
-    
-    <div class="row">
-        <div class="col-md-8">
-            <em-media></em-media>
+<tabset>
+    <tab heading="Library">
+        <div class="em-tab-content">
+            <em-library></em-library>
         </div>
-        <div class="col-md-4">
-            <em-queue></em-queue>
+    </tab>
+    <tab heading="Playlists">
+        <div class="em-tab-content">
+            <em-playlists></em-playlists>
         </div>
-    </div>
-</div>
-
-<em-alert></em-alert>
+    </tab>
+</tabset>
