--- a/src/main/webapp/components/playlists/playlists.css
+++ b/src/main/webapp/components/playlists/playlists.css
@@ -16,28 +16,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-import _ from 'lodash';
-import {Pipe} from '@angular/core';
-
-export class SortPipe {
-    static get annotations() {
-        return [new Pipe({
-            name: 'sort',
-            pure: false
-        })];
-    }
- 
-    static get parameters() {
-        return [];
-    }
- 
-    transform(collection, key) {
-        if(collection && !Array.isArray(collection)) {
-            collection = Array.from(collection);
-        }
-        
-        return _.sortBy(collection, key);
-    }
+.em-playlist-row {
+    margin-bottom: 5px;
 }
-
-export default SortPipe;
