--- a/src/main/webapp/components/playlists/playlists.html
+++ b/src/main/webapp/components/playlists/playlists.html
@@ -29,4 +29,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </button>
         <a (click)="playlistClicked(p)" href="javascript:void(0)">{{p.name}}</a>
     </div>
+    
+    <em-playlist-dialog [visible]="playlistDialogVisible" [mode]="'create'"
+            (onCancel)="setPlaylistDialogVisible(false)" (onSave)="setPlaylistDialogVisible(false)"></em-playlist-dialog>
 </em-loading-overlay>
