--- a/src/main/webapp/assets/css/global.css
+++ b/src/main/webapp/assets/css/global.css
@@ -27,3 +27,11 @@
 .em-top-table-controls-container {
     margin-bottom: 5px;
 }
+
+.ng-valid {
+    border-left: 5px solid #42A948;
+}
+
+.ng-invalid {
+    border-left: 5px solid #A94442;
+}
