[closes #74] Upgrade to Angular 2 RC4
Upgraded from Angular 2 RC1 to RC4.  Also...
 * Updated the forms to be compliant with the new forms API
 * Removed the @angular/upgrade dependency because it was not longer being used

--- a/src/main/webapp/components/eq/eq-button/eq-button.html
+++ b/src/main/webapp/components/eq/eq-button/eq-button.html
@@ -20,7 +20,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <i class="fa fa-sliders fa-rotate-90"></i>
 </button>
 
-<div bsModal #playlistDialogTemplate="bs-modal" class="modal fade eq-dialog" tabindex="-1">
+<div bsModal #eqDialog="bs-modal" class="modal fade eq-dialog" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <em-loading-overlay [overlayVisible]="loading" [fullScreen]="'true'"></em-loading-overlay>
