--- a/src/main/webapp/components/eq/eq.html
+++ b/src/main/webapp/components/eq/eq.html
@@ -25,11 +25,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </div>
                 <div class="text-center">
                     <input class="eq-slider" type="range" min="-40" max="10" step="0.1" orient="vertical"
-                        [(ngModel)]="node.gain" (change)="nodeChanged(node)"/>
+                        name="gainSlider{{index}}" [(ngModel)]="node.gain" (change)="nodeChanged(node)"/>
                 </div>
                 <div class="text-center">
                     <input class="eq-slider-text-field" type="number" min="-40" max="10" step="0.1"
-                        [(ngModel)]="node.gain" (change)="nodeChanged(node)"/>
+                        name="gainText{{index}}" [(ngModel)]="node.gain" (change)="nodeChanged(node)"/>
                 </div>
             </td>
         </tbody>
