[#5] Added playlist breadcrumb bar
Added a playlist breadcrumb bar.

--- a/src/main/webapp/components/playlists/playlists.html
+++ b/src/main/webapp/components/playlists/playlists.html
@@ -17,6 +17,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <em-loading-overlay [overlayVisible]="loading">
+    <em-playlist-breadcrumb [playlist]="playlist" (playlistCleared)="showPlaylists()"></em-playlist-breadcrumb>
+    
     <div [hidden]="playlist">
         <div class="em-top-table-controls-container">
             <button type="button" class="btn btn-xs btn-default" (click)="createPlaylist()" title="create playlist">
